# SunXCorr

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  BLINK_ANIMATION_SUMMARY.md  CHANGES_adaptive_debug_plots.md  CHANGES_blink_animation.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  __init__.py  coalign_debug.py  coalign_helpers.py  coalign_preprocess.py  coalign_workers.py  coaligner.py  download_test_data.py  help_funcs.py  illustration.py  index.html  modules.html  mypy.ini  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html  setup.cfg  setup.py  slimfunc_correlation_effort.py  test_adaptive_plot.py  test_blink_comparison.py  test_coaligner.py  test_coalignment.py  test_correlation_fast.py  test_fast_shift_all_jit.py  test_jit_functions.py  xcorr_to_value.md
_autosummary/: sunxcorr.html  sunxcorr.optimization.html  sunxcorr.orchestrator.html  sunxcorr.single_map_process.html  sunxcorr.synthetic_raster_process.html  sunxcorr.utils.html
coalignment/: __init__.py  base_node.py  blink_utils.py  debug_plot.py  optimization.py  orchestrator.py  process_result.py  single_map_process.py  synthetic_raster_process.py  utils.py  worker_setup.py
docs/: .buildinfo  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_src/: conf.py  index.rst  modules.rst
fits_files/: FSI_174_2024-10-17T014055.208.fits  FSI_174_20250918T154730.820.fits  SPICE_706_2024-10-17T000050.215.fits  SPICE_706_2024-10-17T00:00:50.215.fits  SPICE_706_20250918T154730.820.fits
sunxcorr/: __init__.py  __main__.py  _metadata.py  base_node.py  blink_utils.py  coalign_debug.py  coalign_helpers.py  correlation_jit.py  debug_plot.py  optimization.py  orchestrator.py  process_result.py  single_map_process.py  synthetic_raster_process.py  utils.py  worker_setup.py
tests/: run_tests_quick.py  test_io_and_maps.py  test_reprojection_and_utils.py  test_single_map_process.py  test_synthetic_raster_process.py
tmp/: Model_functions_20260120_154152_13165074.py  Model_functions_20260120_154152_19329075.py  Model_functions_20260120_154152_82255440.py  Model_functions_20260120_154152_92040254.py  Model_functions_20260120_154153_41425943.py  Model_functions_20260120_154153_441202.py  Model_functions_20260120_154153_54381769.py  Model_functions_20260120_154153_63930770.py  Model_functions_20260120_154153_84670058.py  Model_functions_20260120_154153_93104559.py  Model_functions_20260120_154153_93995517.py  Model_functions_20260120_154154_28194582.py  Model_functions_20260120_154154_59239344.py  Model_functions_20260120_154154_68081561.py  Model_functions_20260120_154155_31966428.py  Model_functions_20260120_154155_35039047.py  Model_functions_20260120_154155_42579618.py  Model_functions_20260120_154155_44737744.py  Model_functions_20260120_154155_50768586.py  Model_functions_20260120_154155_50937950.py  Model_functions_20260120_154155_56768103.py  (+385 more)
(+48 files in other folders)
