[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Slimane MZERGUAT <mzergaut.sl@gmail.com>"]
description = "Solar image coalignment utilities and correlation tools"
name = "sunxcorr"
packages = [{include = "sunxcorr"}]
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
astropy = "*"
matplotlib = "*"
mpl-animators = "*"
numba = "*"
numpy = "*"
python = "*"
reproject = "*"
scipy = "*"
sunpy = {version = "*", extras = ["all"]}

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
