[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.9.0"]

[project]
authors = [
  {name = "Slimane Mzerguat", email = "mzergaut.sl@gmail.com"},
  {name = "Slimane Mzerguat", email = "slimane.mzerguat@universite-paris-saclay.fr"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "astropy",
  "matplotlib",
  "mpl-animators",
  "numba",
  "numpy",
  "reproject",
  "scipy",
  "sunpy[all]",
]
description = "Solar image coalignment utilities and correlation tools"
keywords = ["solar", "sunpy", "coalignment", "cross-correlation", "wcs", "fits"]
license = {text = "MIT"}
maintainers = [
  {name = "Slimane Mzerguat", email = "slimane.mzerguat@universite-paris-saclay.fr"},
]
name = "sunxcorr"
readme = "README.md"
requires-python = ">=3.11"
version = "2.0.1"

[project.urls]
Homepage = "https://github.com/slimguat/SunXCorr"
Issues = "https://github.com/slimguat/SunXCorr/issues"
Releases = "https://github.com/slimguat/SunXCorr/releases"
Repository = "https://github.com/slimguat/SunXCorr"

[tool.poetry]
packages = [{include = "sunxcorr"}]

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
